--- a/.github/workflows/dockerize.yml
+++ b/.github/workflows/dockerize.yml
@@ -11,6 +11,10 @@ on:
         description: 'Docker image tag'
         default: 'dev'
 
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   build:
     name: Publish Cohere Terrarium Docker Images
@@ -35,7 +39,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.PAT }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: 🧹 Delete huge unnecessary tools folder
         run: rm -rf /opt/hostedtoolcache
